Renaming "trimming" to "trimmingOf" and "to" to gives.